--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
             </h1>
             <p
                 class="text-xl md:text-2xl text-gray-100 mb-10 max-w-3xl mx-auto leading-relaxed drop-shadow-md font-light">
-                Historic charm meets Discovery District walkability. No gym fees. No unused amenities. Just authentic
-                urban living.
+                Historic charm meets Discovery District walkability. No gym fees. No unused pool table. Just authentic
+                urban living at an honest price.
             </p>
             <p class="text-sm md:text-base text-accent font-bold mb-12 tracking-widest uppercase">
-                3-minute walk to Grant Medical Center. 70+ years of Columbus history.
+                3-minute walk to Grant Medical Center. 70+ years of Columbus history. Your story starts here.
             </p>
             <a href="#contact"
                 class="inline-block bg-accent text-white px-10 py-4 rounded-md font-bold text-lg hover:bg-accent-hover transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
@@ -147,22 +147,33 @@
             <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary mb-16">Our Residents Choose Real Over
                 Generic</h2>
 
-            <div class="grid md:grid-cols-3 gap-10 mb-16 max-w-5xl mx-auto">
+            <div class="grid md:grid-cols-3 gap-10 mb-12 max-w-5xl mx-auto">
                 <div
                     class="flex flex-col items-center p-8 bg-secondary rounded-lg border border-gray-100 shadow-sm hover:shadow-md transition-shadow">
                     <span class="text-accent text-5xl mb-6">★</span>
-                    <span class="font-bold text-text text-lg tracking-wide uppercase">Locally Owned</span>
+                    <span class="font-bold text-text text-lg tracking-wide uppercase text-center">Locally Owned &
+                        Managed</span>
                 </div>
                 <div
                     class="flex flex-col items-center p-8 bg-secondary rounded-lg border border-gray-100 shadow-sm hover:shadow-md transition-shadow">
                     <span class="text-accent text-5xl mb-6">🏛️</span>
-                    <span class="font-bold text-text text-lg tracking-wide uppercase">Historic Registry</span>
+                    <span class="font-bold text-text text-lg tracking-wide uppercase text-center">Historic Registry
+                        Properties</span>
                 </div>
                 <div
                     class="flex flex-col items-center p-8 bg-secondary rounded-lg border border-gray-100 shadow-sm hover:shadow-md transition-shadow">
                     <span class="text-accent text-5xl mb-6">📅</span>
-                    <span class="font-bold text-text text-lg tracking-wide uppercase">Since 1934</span>
+                    <span class="font-bold text-text text-lg tracking-wide uppercase text-center">Serving Downtown
+                        Columbus Since 1934</span>
                 </div>
+            </div>
+
+            <div class="max-w-4xl mx-auto mb-16">
+                <p class="text-lg text-text leading-relaxed text-center">
+                    We're building something different here - a community of people who value character over
+                    cookie-cutter, location over luxury fees, and authenticity over Instagram-worthy amenity spaces
+                    they'll never use. Be one of the first to share your Topiary Park Living story.
+                </p>
             </div>
 
             <div id="google-reviews-widget"
@@ -175,13 +186,18 @@
     <!-- Value Props -->
     <section id="why-us" class="py-24 bg-texture">
         <div class="container mx-auto px-4">
+            <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary text-center mb-16 reveal">Stop Paying for
+                Amenities You'll Never Use</h2>
             <div class="grid md:grid-cols-3 gap-8 lg:gap-12">
                 <!-- Card 1 -->
                 <div
                     class="bg-white p-10 rounded-xl shadow-lg border border-gray-200 hover:-translate-y-2 transition-transform duration-500 reveal">
                     <h3 class="font-serif text-3xl font-bold text-primary mb-6">Real Savings</h3>
                     <p class="text-text leading-relaxed text-lg">
-                        No mandatory parking fees. No gym you won't use. Just honest rent for quality housing.
+                        Your rent covers what matters. Nothing else. No mandatory parking fees ($150/month saved). No
+                        gym you won't use ($50/month saved). No 'amenity fees' for spaces that stay locked. Just honest
+                        pricing for quality housing in the heart of Columbus. That's $2,400+ back in your pocket every
+                        year.
                     </p>
                 </div>
                 <!-- Card 2 -->
@@ -189,7 +205,9 @@
                     style="transition-delay: 100ms;">
                     <h3 class="font-serif text-3xl font-bold text-primary mb-6">Real Location</h3>
                     <p class="text-text leading-relaxed text-lg">
-                        3-min walk to Grant Medical Center. 5-min walk to Art Museum. Everything you need is walkable.
+                        Everything you need within 10 minutes. On foot. 3-minute walk to Grant Medical Center. 5-minute
+                        walk to Columbus Museum of Art. 7-minute walk to Scioto Mile riverfront. This is what walkable
+                        actually means.
                     </p>
                 </div>
                 <!-- Card 3 -->
@@ -197,7 +215,9 @@
                     style="transition-delay: 200ms;">
                     <h3 class="font-serif text-3xl font-bold text-primary mb-6">Real Character</h3>
                     <p class="text-text leading-relaxed text-lg">
-                        Pre-war architecture. 10-foot ceilings. Original hardwood. Your apartment has a story.
+                        Your apartment has a story. Not just a unit number. Pre-war architecture you can't replicate:
+                        10-foot ceilings, original hardwood floors, and Art Deco details. Modern builders can't do this
+                        anymore. This is the real thing.
                     </p>
                 </div>
             </div>
@@ -250,8 +270,12 @@
     <!-- Availability -->
     <section id="availability" class="py-24 bg-texture">
         <div class="container mx-auto px-4 text-center reveal">
-            <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary mb-16">Simple, Spacious, Straightforward
+            <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary mb-8">Simple, Spacious, Straightforward
             </h2>
+            <p class="text-xl text-text mb-16 max-w-3xl mx-auto">
+                One-bedroom apartments from 600-750 square feet. No studio shoebox. No awkward layouts. Just
+                well-designed spaces that feel like home.
+            </p>
 
             <div id="pricing-table-container"
                 class="max-w-5xl mx-auto bg-white rounded-xl shadow-lg border border-gray-200 h-80 flex items-center justify-center mb-10 overflow-hidden">
@@ -260,7 +284,8 @@
 
             <p
                 class="text-primary font-bold bg-white inline-block px-8 py-4 rounded-full border border-gray-200 shadow-sm text-lg">
-                Pricing reflects our no-amenity-fee policy. Heat, gas, and water included.
+                Pricing reflects our no-amenity-fee policy. What you see is what you pay. Heat, gas, water, and trash
+                included.
             </p>
         </div>
     </section>
@@ -269,7 +294,7 @@
     <section id="amenities" class="py-24 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary text-center mb-20 reveal">What You
-                Actually Get vs. What You Don't Pay For</h2>
+                Actually Get (And What You Don't Pay For)</h2>
 
             <div class="grid md:grid-cols-2 gap-16 max-w-6xl mx-auto reveal">
                 <!-- Included -->
@@ -283,19 +308,35 @@
                     <ul class="space-y-6">
                         <li class="flex items-center text-text text-lg">
                             <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
-                            Underground parking (optional)
+                            Underground parking garage ($125/month optional)
                         </li>
                         <li class="flex items-center text-text text-lg">
                             <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
-                            Heat/Gas/Water included
+                            Heat, gas, water, trash included in rent
                         </li>
                         <li class="flex items-center text-text text-lg">
                             <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
-                            Hardwood floors
+                            Original hardwood floors throughout
                         </li>
                         <li class="flex items-center text-text text-lg">
                             <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
-                            Pet-friendly
+                            Hand-crafted ceramic tile bathrooms
+                        </li>
+                        <li class="flex items-center text-text text-lg">
+                            <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
+                            Stainless steel appliances in newly remodeled kitchens
+                        </li>
+                        <li class="flex items-center text-text text-lg">
+                            <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
+                            Pet-friendly (Dogs under 45 lbs)
+                        </li>
+                        <li class="flex items-center text-text text-lg">
+                            <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
+                            Secure keyless entry
+                        </li>
+                        <li class="flex items-center text-text text-lg">
+                            <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
+                            24/7 maintenance (we actually answer the phone)
                         </li>
                     </ul>
                 </div>
@@ -310,15 +351,27 @@
                     <ul class="space-y-6">
                         <li class="flex items-center text-gray-400 text-lg">
                             <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
-                            Mandatory amenity fees
+                            Mandatory parking fees
                         </li>
                         <li class="flex items-center text-gray-400 text-lg">
                             <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
-                            Gym memberships
+                            Gym memberships for facilities you won't use
                         </li>
                         <li class="flex items-center text-gray-400 text-lg">
                             <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
-                            Pool maintenance fees
+                            Pool maintenance fees (for pools that close 8 months a year)
+                        </li>
+                        <li class="flex items-center text-gray-400 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                            "Community space" fees for rooms that stay empty
+                        </li>
+                        <li class="flex items-center text-gray-400 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                            Monthly pet rent (just a one-time deposit)
+                        </li>
+                        <li class="flex items-center text-gray-400 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                            Amenity fees for Instagram-worthy lobbies
                         </li>
                     </ul>
                 </div>
@@ -329,8 +382,12 @@
     <!-- Neighborhood -->
     <section id="neighborhood" class="py-24 bg-texture">
         <div class="container mx-auto px-4">
-            <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary text-center mb-16 reveal">The Discovery
-                District</h2>
+            <h2 class="font-serif text-4xl md:text-5xl font-bold text-primary text-center mb-8 reveal">Your New
+                Neighborhood: The Discovery District</h2>
+            <p class="text-xl text-text text-center mb-16 max-w-3xl mx-auto reveal">
+                Location isn't just an address. It's about what you can walk to before your coffee gets cold. From
+                Topiary Park Living, your life is measured in minutes, not miles.
+            </p>
 
             <div class="grid lg:grid-cols-2 gap-16 items-center max-w-7xl mx-auto reveal">
                 <div id="map-container"
@@ -356,8 +413,8 @@
                                 class="text-accent text-3xl mr-6 mt-1 group-hover:scale-110 transition-transform">🌳</span>
                             <div>
                                 <span class="block font-bold text-text text-xl mb-1">Topiary Park</span>
-                                <span class="text-base text-gray-500 font-medium uppercase tracking-wider">0 min walk
-                                    (It's your backyard)</span>
+                                <span class="text-base text-gray-500 font-medium uppercase tracking-wider">0 min (It's
+                                    your backyard)</span>
                             </div>
                         </li>
                         <li class="flex items-start group">
@@ -366,6 +423,15 @@
                             <div>
                                 <span class="block font-bold text-text text-xl mb-1">Columbus Museum of Art</span>
                                 <span class="text-base text-gray-500 font-medium uppercase tracking-wider">5 min
+                                    walk</span>
+                            </div>
+                        </li>
+                        <li class="flex items-start group">
+                            <span
+                                class="text-accent text-3xl mr-6 mt-1 group-hover:scale-110 transition-transform">🏛️</span>
+                            <div>
+                                <span class="block font-bold text-text text-xl mb-1">State of Ohio Offices</span>
+                                <span class="text-base text-gray-500 font-medium uppercase tracking-wider">10 min
                                     walk</span>
                             </div>
                         </li>
@@ -378,6 +444,12 @@
     <!-- Building Details -->
     <section id="buildings" class="py-24 bg-primary text-white">
         <div class="container mx-auto px-4 reveal">
+            <h2 class="font-serif text-4xl md:text-5xl font-bold text-white text-center mb-8">Two Buildings. One Story.
+                Decades of Character.</h2>
+            <p class="text-xl text-emerald-100 text-center mb-16 max-w-3xl mx-auto">
+                These names are part of Columbus history. We're not trying to rebrand decades of character - we're
+                preserving it.
+            </p>
             <div class="grid md:grid-cols-2 gap-0 border border-emerald-800 rounded-2xl overflow-hidden shadow-2xl">
                 <div
                     class="p-16 bg-emerald-900/40 hover:bg-emerald-900/60 transition-colors border-b md:border-b-0 md:border-r border-emerald-800 backdrop-blur-sm relative overflow-hidden group">
@@ -387,8 +459,11 @@
                     </div>
                     <div class="relative z-10">
                         <h3 class="font-serif text-4xl font-bold text-accent mb-6">La Grande Jatte</h3>
-                        <p class="text-emerald-100 mb-3 text-xl">441 E Town St</p>
-                        <p class="text-sm font-bold tracking-widest uppercase text-emerald-400">Art Deco Style</p>
+                        <p class="text-emerald-100 mb-6 text-xl">441 E Town St</p>
+                        <p class="text-emerald-200 leading-relaxed">
+                            Named after Seurat's masterpiece. Original Art Deco details, hardwood floors, and
+                            craftsmanship from an era when buildings were built to last generations.
+                        </p>
                     </div>
                 </div>
                 <div
@@ -399,8 +474,11 @@
                     </div>
                     <div class="relative z-10">
                         <h3 class="font-serif text-4xl font-bold text-accent mb-6">The Farber House</h3>
-                        <p class="text-emerald-100 mb-3 text-xl">451 E Town St</p>
-                        <p class="text-sm font-bold tracking-widest uppercase text-emerald-400">Pre-War Brownstone</p>
+                        <p class="text-emerald-100 mb-6 text-xl">451 E Town St</p>
+                        <p class="text-emerald-200 leading-relaxed">
+                            Part of the Historic District. High ceilings, natural light, and the kind of solid
+                            construction you can hear (or rather, can't hear) between units.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -423,9 +501,17 @@
     <section id="contact" class="py-32 bg-texture text-center">
         <div class="container mx-auto px-4 max-w-4xl reveal">
             <h2 class="font-serif text-4xl md:text-5xl lg:text-6xl font-bold text-primary mb-10 leading-tight">See Why
-                Downtown Residents Choose Character</h2>
-            <p class="text-2xl text-text mb-12 font-light">
+                Downtown Residents Choose Character Over Cookie-Cutter</h2>
+            <p class="text-xl text-text mb-8 leading-relaxed">
+                You've read the website. You've seen the photos. Now come see why people choose apartments with stories
+                over apartments with 'smart' thermostats they'll never program. Schedule a tour and feel the solid
+                floors under your feet.
+            </p>
+            <p class="text-lg text-text mb-8 font-medium">
                 441 & 451 E Town Street, Columbus, OH 43215
+            </p>
+            <p class="text-base text-primary mb-12 font-bold">
+                Locally owned and managed. We answer our phones. We fix things fast.
             </p>
             <button
                 class="bg-primary text-white px-12 py-5 rounded-md font-bold text-xl hover:bg-emerald-900 transition-all duration-300 shadow-xl hover:shadow-2xl hover:-translate-y-1 w-full md:w-auto">
