Update website copy to V1.0

--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#why-us" class="text-sm font-medium hover:text-primary transition-colors">Why Us</a>
                 <a href="#gallery" class="text-sm font-medium hover:text-primary transition-colors">Gallery</a>
-                <a href="#availability" class="text-sm font-medium hover:text-primary transition-colors">Floor Plans</a>
+                <a href="#availability" class="text-sm font-medium hover:text-primary transition-colors">Pricing</a>
                 <a href="#amenities" class="text-sm font-medium hover:text-primary transition-colors">Amenities</a>
                 <a href="#neighborhood"
                     class="text-sm font-medium hover:text-primary transition-colors">Neighborhood</a>
                 <a href="#contact" class="text-sm font-medium hover:text-primary transition-colors">Contact</a>
-                <a href="#contact"
+                <a href="https://thresholdcbus.managebuilding.com/Resident/public/rentals/30501" target="_blank"
+                    rel="noopener noreferrer"
                     class="bg-primary text-white px-6 py-2.5 rounded-md font-medium hover:bg-emerald-900 hover:-translate-y-1 hover:shadow-xl transition-all duration-300">Schedule
                     Tour</a>
             </nav>
@@ -134,7 +135,8 @@
             <p class="text-sm md:text-base text-accent font-bold mb-12 tracking-widest uppercase">
                 3-minute walk to Grant Medical Center. 70+ years of Columbus history. Your story starts here.
             </p>
-            <a href="#contact"
+            <a href="https://thresholdcbus.managebuilding.com/Resident/public/rentals/30501" target="_blank"
+                rel="noopener noreferrer"
                 class="inline-block bg-accent text-white px-10 py-4 rounded-md font-bold text-lg hover:bg-accent-hover transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
                 Schedule Your Tour
             </a>
@@ -157,8 +159,8 @@
                 <div
                     class="flex flex-col items-center p-8 bg-secondary rounded-lg border border-gray-100 shadow-sm hover:shadow-md transition-shadow">
                     <span class="text-accent text-5xl mb-6">🏛️</span>
-                    <span class="font-bold text-text text-lg tracking-wide uppercase text-center">Historic Registry
-                        Properties</span>
+                    <span class="font-bold text-text text-lg tracking-wide uppercase text-center">Historic Street and
+                        Property</span>
                 </div>
                 <div
                     class="flex flex-col items-center p-8 bg-secondary rounded-lg border border-gray-100 shadow-sm hover:shadow-md transition-shadow">
@@ -285,7 +287,7 @@
             <p
                 class="text-primary font-bold bg-white inline-block px-8 py-4 rounded-full border border-gray-200 shadow-sm text-lg">
                 Pricing reflects our no-amenity-fee policy. What you see is what you pay. Heat, gas, water, and trash
-                included.
+                are billed for exactly the amount used with absolutely NO landlord or 3rd party markup or fees.
             </p>
         </div>
     </section>
@@ -343,34 +345,38 @@
 
                 <!-- Not Included -->
                 <div class="bg-white p-10 rounded-2xl border border-gray-200 shadow-sm opacity-80">
-                    <h3 class="font-serif text-3xl font-bold text-gray-400 mb-8 flex items-center">
+                    <h3 class="font-serif text-3xl font-bold text-gray-500 mb-8 flex items-center">
                         <span
                             class="bg-gray-200 text-gray-500 rounded-full w-10 h-10 flex items-center justify-center text-lg mr-4">✕</span>
                         Not Included
                     </h3>
                     <ul class="space-y-6">
-                        <li class="flex items-center text-gray-400 text-lg">
-                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
                             Mandatory parking fees
                         </li>
-                        <li class="flex items-center text-gray-400 text-lg">
-                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
                             Gym memberships for facilities you won't use
                         </li>
-                        <li class="flex items-center text-gray-400 text-lg">
-                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
                             Pool maintenance fees (for pools that close 8 months a year)
                         </li>
-                        <li class="flex items-center text-gray-400 text-lg">
-                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
                             "Community space" fees for rooms that stay empty
                         </li>
-                        <li class="flex items-center text-gray-400 text-lg">
-                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
                             Monthly pet rent (just a one-time deposit)
                         </li>
-                        <li class="flex items-center text-gray-400 text-lg">
-                            <span class="w-2.5 h-2.5 bg-gray-200 rounded-full mr-4"></span>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
+                            3rd party or Landlord fees to submeter utilities
+                        </li>
+                        <li class="flex items-center text-gray-600 text-lg">
+                            <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
                             Amenity fees for Instagram-worthy lobbies
                         </li>
                     </ul>
@@ -392,7 +398,6 @@
             <div class="grid lg:grid-cols-2 gap-16 items-center max-w-7xl mx-auto reveal">
                 <div id="map-container"
                     class="bg-gray-200 rounded-xl h-[500px] w-full flex items-center justify-center border border-gray-300 shadow-inner overflow-hidden relative">
-                    <div class="absolute inset-0 bg-primary/20 mix-blend-multiply z-10 pointer-events-none"></div>
                     <p class="text-gray-500 font-medium italic z-0">Map Container Placeholder</p>
                 </div>
 
@@ -513,10 +518,11 @@
             <p class="text-base text-primary mb-12 font-bold">
                 Locally owned and managed. We answer our phones. We fix things fast.
             </p>
-            <button
-                class="bg-primary text-white px-12 py-5 rounded-md font-bold text-xl hover:bg-emerald-900 transition-all duration-300 shadow-xl hover:shadow-2xl hover:-translate-y-1 w-full md:w-auto">
+            <a href="https://thresholdcbus.managebuilding.com/Resident/public/rentals/30501" target="_blank"
+                rel="noopener noreferrer"
+                class="inline-block bg-primary text-white px-12 py-5 rounded-md font-bold text-xl hover:bg-emerald-900 transition-all duration-300 shadow-xl hover:shadow-2xl hover:-translate-y-1 w-full md:w-auto">
                 Schedule Your Tour Today
-            </button>
+            </a>
         </div>
     </section>
 
