--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         </li>
                         <li class="flex items-center text-gray-600 text-lg">
                             <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
-                            Monthly pet rent (just a one-time deposit)
+                            Startup Fees
                         </li>
                         <li class="flex items-center text-gray-600 text-lg">
                             <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
@@ -377,7 +377,7 @@
                         </li>
                         <li class="flex items-center text-gray-600 text-lg">
                             <span class="w-2.5 h-2.5 bg-gray-300 rounded-full mr-4"></span>
-                            Amenity fees for Instagram-worthy lobbies
+                            Slow and Careless Maintenance
                         </li>
                     </ul>
                 </div>
