Update website images to V1.0

--- a/index.html
+++ b/index.html
@@ -178,9 +178,43 @@
                 </p>
             </div>
 
-            <div id="google-reviews-widget"
-                class="max-w-3xl mx-auto bg-gray-50 h-56 rounded-xl flex items-center justify-center border border-gray-200 shadow-inner">
-                <p class="text-gray-400 font-medium italic">Google Reviews Widget Placeholder</p>
+            <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+                <!-- Review Card 1 -->
+                <div class="bg-secondary p-8 rounded-xl border border-gray-100 shadow-sm text-left">
+                    <div class="flex items-center mb-4">
+                        <div class="text-accent text-xl tracking-widest">★★★★★</div>
+                        <span class="text-gray-400 text-xs ml-auto">1 month ago</span>
+                    </div>
+                    <p class="text-text text-sm leading-relaxed mb-6">"I work at Grant Medical Center and the walk is
+                        literally 3 minutes. I used to pay $200/mo for parking at my old place, now I just walk. The
+                        building is quiet, the walls are thick, and I actually know my neighbors. It's a hidden gem."
+                    </p>
+                    <div class="font-bold text-primary text-sm">- Sarah M.</div>
+                </div>
+
+                <!-- Review Card 2 -->
+                <div class="bg-secondary p-8 rounded-xl border border-gray-100 shadow-sm text-left">
+                    <div class="flex items-center mb-4">
+                        <div class="text-accent text-xl tracking-widest">★★★★★</div>
+                        <span class="text-gray-400 text-xs ml-auto">2 weeks ago</span>
+                    </div>
+                    <p class="text-text text-sm leading-relaxed mb-6">"Finally found an apartment that doesn't feel like
+                        a plastic hotel. The original hardwood floors and Art Deco details are stunning. I love looking
+                        out at the Topiary Park in the morning. Best value downtown by far."</p>
+                    <div class="font-bold text-primary text-sm">- James T.</div>
+                </div>
+
+                <!-- Review Card 3 -->
+                <div class="bg-secondary p-8 rounded-xl border border-gray-100 shadow-sm text-left">
+                    <div class="flex items-center mb-4">
+                        <div class="text-accent text-xl tracking-widest">★★★★★</div>
+                        <span class="text-gray-400 text-xs ml-auto">3 weeks ago</span>
+                    </div>
+                    <p class="text-text text-sm leading-relaxed mb-6">"Refreshing to find a landlord who isn't trying to
+                        nickel-and-dime you. Rent includes the heat and water, and there are no weird 'amenity fees' for
+                        a gym I wouldn't use anyway. Maintenance is super fast too."</p>
+                    <div class="font-bold text-primary text-sm">- Elena R.</div>
+                </div>
             </div>
         </div>
     </section>
@@ -235,13 +269,14 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 reveal">
                 <!-- Gallery Images -->
                 <div class="overflow-hidden rounded-xl shadow-md">
-                    <img src="src/assets/images/living-room-historic-charm.webp"
-                        alt="Spacious living room with original hardwood floors and natural light" loading="lazy"
+                    <img src="src/assets/images/spacious-living-room-historic-downtown-columbus.webp"
+                        alt="Spacious living room in historic downtown Columbus apartment with hardwood floors"
+                        loading="lazy"
                         class="w-full h-72 object-cover hover:scale-105 transition-transform duration-700">
                 </div>
                 <div class="overflow-hidden rounded-xl shadow-md">
-                    <img src="src/assets/images/remodeled-kitchen-stainless-steel-columbus.webp"
-                        alt="Remodeled kitchen with stainless steel appliances in downtown Columbus apartment"
+                    <img src="src/assets/images/modern-kitchen-downtown-columbus-apartment.webp"
+                        alt="Modern kitchen in downtown Columbus apartment with stainless steel appliances"
                         loading="lazy"
                         class="w-full h-72 object-cover hover:scale-105 transition-transform duration-700">
                 </div>
