Fix mobile hero and pricing layout

--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
     </header>
 
     <!-- Hero -->
-    <section id="hero" class="relative py-32 md:py-48 lg:py-64 text-white overflow-hidden parallax-bg"
+    <section id="hero"
+        class="relative py-32 md:py-48 lg:py-64 text-white overflow-hidden bg-scroll md:parallax-bg bg-center bg-cover bg-no-repeat"
         style="background-image: url('src/assets/images/topiary-park-living-exterior-discovery-district.webp');">
-        <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/40 to-primary/90 z-0"></div>
+        <div
+            class="absolute inset-0 bg-gradient-to-b from-black/50 via-black/30 to-primary/80 md:from-black/60 md:via-black/40 md:to-primary/90 z-0">
+        </div>
         <div class="container mx-auto px-4 relative z-10 text-center max-w-5xl reveal">
             <h1 class="font-serif text-5xl md:text-6xl lg:text-7xl font-bold mb-8 leading-tight drop-shadow-lg">
                 Live Where Columbus Comes Alive
@@ -298,6 +301,21 @@
                 <div class="overflow-hidden rounded-xl shadow-md">
                     <img src="src/assets/images/renovated-bathroom-modern-fixtures.webp"
                         alt="Newly renovated bathroom with modern fixtures and historic charm" loading="lazy"
+                        class="w-full h-72 object-cover hover:scale-105 transition-transform duration-700">
+                </div>
+                <div class="overflow-hidden rounded-xl shadow-md">
+                    <img src="src/assets/images/view-of-topiary-park-from-window.webp"
+                        alt="View of Topiary Park from apartment window in downtown Columbus" loading="lazy"
+                        class="w-full h-72 object-cover hover:scale-105 transition-transform duration-700">
+                </div>
+                <div class="overflow-hidden rounded-xl shadow-md">
+                    <img src="src/assets/images/farber-house-exterior.webp"
+                        alt="The Farber House historic building exterior on East Town Street" loading="lazy"
+                        class="w-full h-72 object-cover hover:scale-105 transition-transform duration-700">
+                </div>
+                <div class="overflow-hidden rounded-xl shadow-md">
+                    <img src="src/assets/images/la-grande-jatte-exterior.webp"
+                        alt="La Grande Jatte Art Deco building exterior in Columbus Discovery District" loading="lazy"
                         class="w-full h-72 object-cover hover:scale-105 transition-transform duration-700">
                 </div>
             </div>
